# Data-Analysis-and-Visualization-MCP

./: .gitignore  AI-PoweredDataAnalysisandVisualizationMCPService.md  README.md  maas_client.py  main.py  pyproject.toml  smoke_test.py
.codebuddy/: analysis-summary.json
docs/: tasks.md
outputs/: maas_last_response.json
outputs/reports/: 2b1df6821dfb444cb0d0a72ddcd6dd73_report_ProductCategory_Revenue_sum_20250902T103202Z.html  3ac98b3235d14eddab742872927f2538_report_Column1_Column2_sum_20250902T075248Z.html  3ac98b3235d14eddab742872927f2538_report_Column1_Column2_sum_20250902T100032Z.html  4eb1644583d6476eb871088718376991_report_Region_Sales_sum_20250902T091050Z.html  5bfb7c55619746d282e8e17c5c444c7a_report_Region_Sales_sum_20250902T091152Z.html  609796de110447da83f6c3b4657964d1_line_ai_report.html  609796de110447da83f6c3b4657964d1_report_OrderDate_Revenue_sum_20250902T112022Z.html  7c84732a2b7249349d73dd6f51f87c03_report_Region_Sales_sum_20250902T090716Z.html  a9542cdb7a744cd7b4740c2e164b805a_report_Column1_Column2_sum_20250902T044255Z.html  f89496e5be6a4c21acfdb0a480936ac4_report_Column1_Column2_sum_20250902T044016Z.html
samples/: sales_small.csv
scripts/: gen_excel_sample.py  gen_line.py  gen_report.py  smoke_e2e.py  test_excel_pipeline.py  test_line.py  test_report.py
utils/: interactive_line.py
