[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.12.3",
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
